--- a/DartsRatingCalculator/DartsRatingCalculator.csproj
+++ b/DartsRatingCalculator/DartsRatingCalculator.csproj
@@ -48,6 +48,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Gravoc.Encryption">
+      <HintPath>T:\Assemblies\Gravoc.Encryption.dll</HintPath>
+    </Reference>
     <Reference Include="HtmlAgilityPack">
       <HintPath>..\packages\HtmlAgilityPack.1.4.9\lib\Net45\HtmlAgilityPack.dll</HintPath>
     </Reference>
