--- a/DartsRatingCalculator/DartsRatingCalculator.csproj
+++ b/DartsRatingCalculator/DartsRatingCalculator.csproj
@@ -109,6 +109,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="unregisteredPlayers.xlsx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
