--- a/DartsWebApp/Web.config
+++ b/DartsWebApp/Web.config
@@ -15,6 +15,7 @@
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-WebApplication1-20150820130150;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-WebApplication1-20150820130150.mdf" />
   </connectionStrings>
   <system.web>
+    <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" requestValidationMode="2.0" />
     <pages validateRequest="false">
@@ -79,7 +80,7 @@
   <applicationSettings>
     <WebApplication1.Properties.Settings>
       <setting name="ConnectionString" serializeAs="String">
-        <value>Data Source=APPDEV2;Initial Catalog=MDC;Persist Security Info=True;User ID=mmdl;Password=darts</value>
+        <value>Data Source=rocci.xyz;Initial Catalog=MMDL;Persist Security Info=True;User ID=mmdl;Password=darts</value>
       </setting>
     </WebApplication1.Properties.Settings>
   </applicationSettings>
